easy-gray-api/deployment.yaml
# deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: qa
  name: easy-gray-api
  labels:
    app: easy-gray-api
    release: easy-gray-api
    podEnv: qa
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate

  selector:
    matchLabels:
      app: easy-gray-api
      release: easy-gray-api
  template:
    metadata:
      labels:
        app: easy-gray-api
        release: easy-gray-api
    spec:
      imagePullSecrets:
        - name: ali-docker-repository
      volumes:
        - name: maven
          persistentVolumeClaim:
            claimName: maven
      containers:
        - name: easy-gray-api
          image: registry.cn-hangzhou.aliyuncs.com/ranmo/easy-gray-api:1.6


          imagePullPolicy: IfNotPresent
          securityContext:
            privileged: true
          ports:
            - name: http
              containerPort: 10081
              protocol: TCP
          volumeMounts:
            - mountPath: /root/.m2/repository
              name: maven
          resources:
            limits:
              cpu: 1024m
              memory: 2048Mi
            requests:
              cpu: 1024m
              memory: 2048Mi
